# topdown

./: AGENTS.md  CMakeLists.txt  buildDist.sh
assets/actors/hotel_clerk/: actor.json  hotel_clerk.actor.json  hotel_clerk.json
assets/actors/main_actor/: actor.json  main_actor.actor.json  main_actor.json
assets/actors/npc_actor/: actor.json  npc_actor.actor.json  npc_actor.json
assets/actors/store_clerk/: actor.json  store_clerk.actor.json  store_clerk.json
assets/actors/template_actor/: actor.json  template_actor.actor.json  template_actor.json
assets/art/: beach_house.aseprite  phone.aseprite
assets/audio/: audio.json
assets/characters/npcs/: knifethug.json  pistolthug.json  zombie.json
assets/characters/player/: feet_idle.json  feet_run.json  feet_strafe_left.json  feet_strafe_right.json  feet_walk.json  flashlight_idle.json  flashlight_move.json  handgun_idle.json  handgun_meleeattack.json  handgun_move.json  handgun_rangedattack.json  handgun_reload.json  knife_idle.json  knife_meleeattack.json  knife_move.json  player.json  rifle_idle.json  (+9 more)
assets/dialogue/: basement_demo.json  hotel_clerk.json  npc_actor_intro.json  store_clerk_intro.json
assets/items/: rusty_key.json  sausage.json
assets/props/: cat_prop.json  cat_prop.prop.json  furnace_fire.json  furnace_fire.prop.json  german_shepard.json  german_shepard.prop.json  phone.json
doc/: adventure_scripting_guide_current.md  desc.txt  desc2.txt  effect_shaders_cheat_sheet.md  narration_guide.md  notes.txt
sources/: Main.cpp
sources/adventure/: ActorDefinitionAsset.cpp  ActorDefinitionAsset.h  AdventureActionData.h  AdventureActionSystem.cpp  AdventureActionSystem.h  AdventureCamera.cpp  AdventureCamera.h  AdventureData.h  AdventureHelpers.cpp  AdventureHelpers.h  AdventureInternal.cpp  AdventureInternal.h  AdventureScriptCommands.cpp  AdventureScriptCommands.h  AdventureUpdate.cpp  AdventureUpdate.h  Dialogue.cpp  Dialogue.h  DialogueChoiceAsset.cpp  DialogueChoiceAsset.h  Inventory.cpp  Inventory.h  InventoryData.h  InventoryUi.cpp  InventoryUi.h  ItemDefinitionAsset.cpp  ItemDefinitionAsset.h
sources/audio/: Audio.cpp  Audio.h  AudioAsset.cpp  AudioAsset.h  AudioData.h
sources/data/: GameState.h
sources/debug/: DebugConsole.cpp  DebugConsole.h  DebugConsoleCommands.cpp  DebugConsoleInput.cpp  DebugConsoleInternal.h  DebugConsoleRender.cpp  DebugConsoleTraceLog.cpp  DebugConsoleTraceLog.h  DebugData.h
sources/input/: Input.cpp  Input.h  InputData.h
sources/menu/: Menu.cpp  Menu.h
sources/nav/: NavMeshBuild.cpp  NavMeshBuild.h  NavMeshData.h  NavMeshQuery.cpp  NavMeshQuery.h
sources/platform/: MacFullscreenBridge.h  MacFullscreenBridge.mm
sources/render/: DebugRender.cpp  DebugRender.h  EffectShaderRegistry.cpp  EffectShaderRegistry.h  EffectTypes.h  RenderHelpers.cpp  RenderHelpers.h  SceneRender.cpp  SceneRender.h  SceneRenderCompose.cpp  SceneRenderData.h  SceneRenderDraw.cpp  SceneRenderInternal.h  SceneRenderItems.cpp  UiRender.cpp  UiRender.h
sources/resources/: AsepriteAsset.cpp  AsepriteAsset.h  ResourceData.h  Resources.cpp  Resources.h  TextureAsset.cpp  TextureAsset.h
sources/save/: SaveGame.cpp  SaveGame.h
sources/scene/: SceneData.h  SceneHelpers.cpp  SceneHelpers.h  SceneLoad.cpp  SceneLoad.h  TiledImport.cpp  TiledImport.h
sources/scripting/: ScriptData.h  ScriptSystem.cpp  ScriptSystem.h  ScriptSystemInternal.h  ScriptSystemLuaApi.cpp  ScriptWaitBridge.cpp  ScriptWaitBridge.h
sources/settings/: Settings.cpp  Settings.h  SettingsData.h
sources/topdown/: BloodRenderTarget.cpp  BloodRenderTarget.h  BloodStampGeneration.cpp  BloodStampGeneration.h  CharacterRender.cpp  CharacterRender.h  LevelCamera.cpp  LevelCamera.h  LevelCollision.cpp  LevelCollision.h  LevelDoors.cpp  LevelDoors.h  LevelEffects.cpp  LevelEffects.h  LevelInput.cpp  LevelInput.h  LevelLoad.cpp  LevelLoad.h  LevelProps.cpp  LevelProps.h  LevelRegistry.cpp  LevelRegistry.h  LevelRender.cpp  LevelRender.h  LevelRenderDebug.cpp  LevelRenderDebug.h  LevelScripting.cpp  LevelScripting.h  LevelUpdate.cpp  LevelUpdate.h  LevelWindows.cpp  LevelWindows.h  NpcRegistry.cpp  NpcRegistry.h  NpcUpdate.cpp  NpcUpdate.h  PlayerLoad.cpp  PlayerRegistry.cpp  PlayerRegistry.h  PlayerUpdate.cpp  (+33 more)
sources/ui/: Cursor.cpp  Cursor.h  CursorData.h  NarrationPopups.cpp  NarrationPopups.h  NarrationPopupsData.h  TalkColors.cpp  TalkColors.h
sources/utils/: Interpolation.cpp  Interpolation.h  ScopeTimer.h  earcut.h  json.hpp
(+63 files in other folders)
